# checkstyle-cli

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: release-drafter-config.yml
.github/workflows/: bump-version.yml  python-publish.yml  python-test.yml  release-drafter.yml
docs/: checkstyle.rst  checkstyle.utils.parser.rst  conf.py  index.rst  requirements.txt
docs/source/: checkstyle.application.rst  checkstyle.cli.rst  checkstyle.utils.rst  checkstyle.utils.store.rst  conf.py  index.rst  modules.rst
docs/source/api/: checkstyle.application.rst  checkstyle.cli.rst  checkstyle.utils.parser.rst  checkstyle.utils.rst  checkstyle.utils.store.rst  index.rst
docs/source/user_guide/: caching.rst  index.rst  options.rst  requirements.rst
src/: __main__.py  application.py  cli.py
src/checkstyle/: __init__.py  __main__.py  application.py  cli.py  utils.py
src/checkstyle/utils/: __init__.py  parser.py  store.py
src/main/: application.py  cli.py  utils.py
tests/: test_application.py  test_parser.py
