[metadata]
name = checkstyle_cli
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/junghoon-vans/checkstyle-cli
author = junghoon-vans
author_email = junghoon.ban@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    requests
    tqdm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    checkstyle = main.cli:main
