[metadata]
name = checkstyle_cli
version = 0.3.0
description = A command-line tool for checkstyle.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/junghoon-vans/checkstyle-cli
author = junghoon-vans
author_email = junghoon.ban@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    appdirs
    requests
    tqdm
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    checkstyle = checkstyle.cli:main
