[metadata]
name = checkstyle_cli
version = attr: checkstyle.__version__
description = A command-line tool for checkstyle.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/junghoon-vans/checkstyle-cli
author = junghoon-vans
author_email = junghoon.ban@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    appdirs
    requests
    tqdm
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    checkstyle = checkstyle.cli:main
